--- a/templates/person/show.phtml
+++ b/templates/person/show.phtml
@@ -7,9 +7,9 @@
             $this->partial(
                 'activitystream.phtml',
                 array(
-                    'profileshowActivities' => $this->profileshowActivities,
-                    'profileshowPersonUri' => $this->profileshowPersonUri,
-                    'profileshowName' => $this->profileshowName
+                    'activities' => $this->profileshowActivities,
+                    'personUri' => $this->profileshowPersonUri,
+                    'personName' => $this->profileshowName
                 )
             );
         ?>
