--- a/templates/user/home.phtml
+++ b/templates/user/home.phtml
@@ -56,9 +56,9 @@
             $this->partial(
                 'activitystream.phtml',
                 array(
-                    'profileshowActivities' => $this->profileshowActivities,
-                    'profileshowPersonUri' => $this->profileshowPersonUri,
-                    'profileshowName' => $this->profileshowName,
+                    'activities' => $this->profileshowActivities,
+                    'personUri' => $this->profileshowPersonUri,
+                    'personName' => $this->profileshowName,
                     'home' => true
                 )
             );
