Added a markup for the Debug-Version.

--- a/templates/partials/menu.phtml
+++ b/templates/partials/menu.phtml
@@ -9,6 +9,7 @@
             <a href="?c=user&amp;a=home" class="btn">
                 <i class="icon-user"></i> <?= $this->username ?>
             </a>
+            <em>Debud-Version.</em>
         </div>
     </li>
 </ul>
