Changed place of Debug-Hint

--- a/templates/partials/menu.phtml
+++ b/templates/partials/menu.phtml
@@ -9,8 +9,8 @@
             <a href="?c=user&amp;a=home" class="btn">
                 <i class="icon-user"></i> <?= $this->username ?>
             </a>
-            <em>Debud-Version.</em>
         </div>
+        <em>Debug-Version.</em>
     </li>
 </ul>
 <div class="nav-collapse">
