[+] Added Link to ProfileEditor

--- a/templates/partials/menu.phtml
+++ b/templates/partials/menu.phtml
@@ -19,6 +19,7 @@
     <li><a href="?c=profile&amp;a=list">List All Profiles</a></li>
 </ul>
 <ul class="nav pull-right">
+    <li><a href="?c=application&amp;a=profileeditor">Profile Editor</a></li>
     <li><a href="?c=application&amp;a=login">Login</a></li>
     <li><a href="?c=application&amp;a=logout">Logout</a></li>
 </ul>
