--- a/templates/application/profileeditor.phtml
+++ b/templates/application/profileeditor.phtml
@@ -1,5 +1,5 @@
 <h2>Profil Editor</h2>
-<!-- <form action="?c=application&amp;a=login" method="post" class="form-horizontal">
+<<form action="?c=application&amp;a=login" method="post" class="form-horizontal">
 <fieldset>
 <div class="control-group">
     <label class="control-label" for="username">Username</label>
@@ -15,8 +15,8 @@
 </div>
 <div class="form-actions">
     <button class="btn btn-primary" type="submit">Login</button>
-</div> -->
+</div>
 <p>Dies ist die Seite für den Profileditor.</p>
-<!--</fieldset>-->
+</fieldset>
 </form>
 
