--- a/templates/application/profileeditor.phtml
+++ b/templates/application/profileeditor.phtml
@@ -1,16 +1,22 @@
 <h2>Profil Editor</h2>
-<<form action="?c=application&amp;a=login" method="post" class="form-horizontal">
+<form action="?c=user&amp;a=edit" method="post" class="form-horizontal">
 <fieldset>
 <div class="control-group">
-    <label class="control-label" for="username">Username</label>
+    <label class="control-label" for="username">A</label>
     <div class="controls">
-        <input type="text" class="input-xlarge" name="username" id="username" />
+        <input type="text" class="input-xlarge" name="a" id="a" />
     </div>
 </div>
 <div class="control-group">
-    <label class="control-label" for="password">Password</label>
+    <label class="control-label" for="password">B</label>
     <div class="controls">
-        <input type="password" class="input-xlarge" name="password" id="password" /><br />
+        <input type="text" class="input-xlarge" name="b" id="b" /><br />
+    </div>
+</div>
+<div class="control-group">
+    <label class="control-label" for="password">C</label>
+    <div class="controls">
+        <input type="text" class="input-xlarge" name="c" id="c" /><br />
     </div>
 </div>
 <div class="form-actions">
