[i] Moved to PersonController.php

--- a/templates/application/profileeditor.phtml
+++ b/templates/application/profileeditor.phtml
@@ -1,5 +1,5 @@
 <h2>Profil Editor</h2>
-<form action="?c=user&amp;a=edit" method="post" class="form-horizontal">
+<form action="?c=profile&amp;a=edit" method="post" class="form-horizontal">
 <fieldset>
 <div class="control-group">
     <label class="control-label" for="username">A</label>
@@ -20,7 +20,7 @@
     </div>
 </div>
 <div class="form-actions">
-    <button class="btn btn-primary" type="submit">Login</button>
+    <button class="btn btn-primary" type="submit">Edit</button>
 </div>
 <p>Dies ist die Seite für den Profileditor.</p>
 </fieldset>
