--- a/templates/application/profileeditor.phtml
+++ b/templates/application/profileeditor.phtml
@@ -1,5 +1,5 @@
 <h2>Profil Editor</h2>
-<form action="?c=profile&amp;a=edit" method="post" class="form-horizontal">
+<form action="?c=person&amp;a=edit" method="post" class="form-horizontal">
 <fieldset>
 <div class="control-group">
     <label class="control-label" for="username">A</label>
