--- a/templates/partials/menu.phtml
+++ b/templates/partials/menu.phtml
@@ -21,6 +21,6 @@
 <ul class="nav pull-right">
     <li><a href="?c=application&amp;a=profileeditor">Profile Editor</a></li>
     <li><a href="?c=application&amp;a=login">Login</a></li>
-    <li><a href="?c=application&amp;a=logout">Logout</a></li>
+    <li><a href="?c=person&amp;a=logout">Logout</a></li>
 </ul>
 </div><!--/.nav-collapse -->
