[i] Das muss noch mit rein

--- a/templates/partials/menu.phtml
+++ b/templates/partials/menu.phtml
@@ -23,4 +23,5 @@
     <li><a href="?c=application&amp;a=login">Login</a></li>
     <li><a href="?c=person&amp;a=logout">Logout</a></li>
 </ul>
-</div><!--/.nav-collapse -->
+</div>
+<!--/.nav-collapse -->
