--- a/templates/partials/menu.phtml
+++ b/templates/partials/menu.phtml
@@ -19,9 +19,9 @@
     <li><a href="?c=profile&amp;a=list">List All Profiles</a></li>
 </ul>
 <ul class="nav pull-right">
-    <li><a href="?c=application&amp;a=profileeditor">Profile Editor</a></li>
+    <li><a href="?c=person&amp;a=profileeditor">Profile Editor</a></li>
     <li><a href="?c=application&amp;a=login">Login</a></li>
-    <li><a href="?c=person&amp;a=logout">Logout</a></li>
+    <li><a href="?c=application&amp;a=logout">Logout</a></li>
 </ul>
 </div>
 <!--/.nav-collapse -->
