[i] Let us see if this works

--- a/templates/person/profileeditor.phtml
+++ b/templates/person/profileeditor.phtml
@@ -8,13 +8,13 @@
     </div>
 </div>
 <div class="control-group">
-    <label class="control-label" for="password">B</label>
+    <label class="control-label" for="username">B</label>
     <div class="controls">
         <input type="text" class="input-xlarge" name="b" id="b" /><br />
     </div>
 </div>
 <div class="control-group">
-    <label class="control-label" for="password">C</label>
+    <label class="control-label" for="username">C</label>
     <div class="controls">
         <input type="text" class="input-xlarge" name="c" id="c" /><br />
     </div>
