--- a/templates/person/profileeditor.phtml
+++ b/templates/person/profileeditor.phtml
@@ -2,12 +2,12 @@
 <form action="?c=person&amp;a=edit" method="post" class="form-horizontal">
 <fieldset>
 <div class="control-group">
-    <label class="control-label" for="username">A</label>
+    <label class="control-label" for="Nick">A</label>
     <div class="controls">
-        <input type="text" class="input-xlarge" name="a" id="a" />
+        <input type="text" class="input-xlarge" name="Nick" id="nick" />
     </div>
 </div>
-<div class="control-group">
+<!-- <div class="control-group">
     <label class="control-label" for="username">B</label>
     <div class="controls">
         <input type="text" class="input-xlarge" name="b" id="b" /><br />
@@ -22,6 +22,7 @@
 <div class="form-actions">
     <button class="btn btn-primary" type="submit">Edit</button>
 </div>
+-->
 <p>Dies ist die Seite für den Profileditor.</p>
 </fieldset>
 </form>
