--- a/templates/person/profileeditor.phtml
+++ b/templates/person/profileeditor.phtml
@@ -4,7 +4,7 @@
 <div class="control-group">
     <label class="control-label" for="Nick">Nick</label>
     <div class="controls">
-        <input type="text" class="input-xlarge" name="Nick" id="nick" value="<?php echo($this->getName) ?>"/>
+        <input type="text" class="input-xlarge" name="Nick" id="nick" value="<?php echo(getUser->getName) ?>"/>
     </div>
 </div>
 <!-- <div class="control-group">
