--- a/templates/person/profileeditor.phtml
+++ b/templates/person/profileeditor.phtml
@@ -25,6 +25,8 @@
 </div>
 
 <p>Dies ist die Seite für den Profileditor.</p>
+
+<p>Ein paar Tests:<br><?php echo("test") ?> <br> <?php echo($this) ?></p>
 </fieldset>
 </form>
 
