--- a/templates/person/profileeditor.phtml
+++ b/templates/person/profileeditor.phtml
@@ -26,7 +26,8 @@
 
 <p>Dies ist die Seite für den Profileditor.</p>
 
-<p>Ein paar Tests:<br><?php echo("test") ?> <br> <?php echo($this) ?></p>
+<!-- <p>Ein paar Tests:<br><?php echo("test") ?> <br> <?php echo($this) ?></p> -->
+
 </fieldset>
 </form>
 
