--- a/templates/person/profileeditor.phtml
+++ b/templates/person/profileeditor.phtml
@@ -4,7 +4,7 @@
 <div class="control-group">
     <label class="control-label" for="Nick">Nick</label>
     <div class="controls">
-        <input type="text" class="input-xlarge" name="Nick" id="nick" value="<?php echo(getUser->getName) ?>"/>
+        <input type="text" class="input-xlarge" name="Nick" id="nick" value="FooBar"/>
     </div>
 </div>
 <!-- <div class="control-group">
@@ -26,7 +26,7 @@
 
 <p>Dies ist die Seite für den Profileditor.</p>
 
-<!-- <p>Ein paar Tests:<br><?php echo("test") ?> <br> <?php echo($this) ?></p> -->
+<p>Ein paar Tests:<br><?php echo("test") ?> <br> <?php echo($this) ?></p>
 
 </fieldset>
 </form>
