[i] See if this works.

--- a/templates/person/profileeditor.phtml
+++ b/templates/person/profileeditor.phtml
@@ -51,7 +51,7 @@
 
 <p>Ein paar Tests:<br><?php echo("test";) ?> <br> <?php ?></p>
 
-<?php echo ((string)$this;)?>
+<?= $this->profileshowPersonUri ?>
 
 </fieldset>
 </form>
