--- a/templates/person/profileeditor.phtml
+++ b/templates/person/profileeditor.phtml
@@ -1,6 +1,7 @@
 <h2>Profil Editor</h2>
 <form action="?c=person&amp;a=edit" method="post" class="form-horizontal">
 <fieldset>
+
 <div class="control-group">
     <label class="control-label" for="Nick">Nick</label>
     <div class="controls">
@@ -49,10 +50,10 @@
 
 <p>Dies ist die Seite für den Profileditor.</p>
 
-<p>Ein paar Tests:<br><?php echo("test";) ?> <br> <?php ?></p>
-
-
+<p>Ein paar Tests:<br><?php echo("test") ?> <br> <?php ?></p>
 
 </fieldset>
+
+
 </form>
 
