--- a/templates/person/profileeditor.phtml
+++ b/templates/person/profileeditor.phtml
@@ -51,6 +51,7 @@
 <p>Dies ist die Seite für den Profileditor.</p>
 
 <p>Ein paar Tests:<br><?php echo("test") ?> <br> <?php ?></p>
+<?= $this->profileshowPersonUri ?>
 
 </fieldset>
 
