[i] With Text-Message

--- a/templates/person/profileeditor.phtml
+++ b/templates/person/profileeditor.phtml
@@ -50,9 +50,10 @@
 
 <p>Dies ist die Seite für den Profileditor.</p>
 
-<p>Ein paar Tests:<br><?php echo("test") ?> <br> <?php ?></p>
-<?= $this->profileshowPersonUri ?>
+<p>Ein paar Tests:<br><?php echo("test") ?> <br>
 
+Peron Uri: <?= $this->profileshowPersonUri ?>
+</p>
 
 </fieldset>
 
