--- a/templates/person/profileeditor.phtml
+++ b/templates/person/profileeditor.phtml
@@ -11,7 +11,7 @@
 <div class="control-group">
     <label class="control-label" for="Nick">Nick</label>
     <div class="controls">
-        <input type="text" class="input-xlarge" name="Nick" id="nick" value="<?= $this->profileshowPersonUri ?>"/>
+        <input type="text" class="input-xlarge" name="nick" id="nick" value="<?= $this->profileshowPersonUri ?>"/>
     </div>
 </div>
 
