--- a/templates/person/profileeditor.phtml
+++ b/templates/person/profileeditor.phtml
@@ -4,14 +4,14 @@
 
 <div class="control-group">
     <div class="controls">
-        <input type="hidden" class="input-xlarge" name="url" id="url" value="<?= $this->profileshowPersonUri() ?>"/>
+        <input type="hidden" class="input-xlarge" name="url" id="url" value="<?= $this->profileshowPersonUri ?>"/>
     </div>
 </div>
 
 <div class="control-group">
     <label class="control-label" for="Nick">Nick</label>
     <div class="controls">
-        <input type="text" class="input-xlarge" name="nick" id="nick" value=""/>
+        <input type="text" class="input-xlarge" name="nick" id="nick" value="<?= $this->profileshowLogInUri ?>"/>
     </div>
 </div>
 
