--- a/templates/person/profileeditor.phtml
+++ b/templates/person/profileeditor.phtml
@@ -2,7 +2,7 @@
 <form action="?c=person&amp;a=edit" method="post" class="form-horizontal">
 <fieldset>
 
-<?=
+<?php
 foreach ($profile as $element)
 
 var_dump($element);
