--- a/templates/person/profileeditor.phtml
+++ b/templates/person/profileeditor.phtml
@@ -3,14 +3,15 @@
 <fieldset>
 
 <?php
-foreach (this->$profile as $element)
 
-var_dump($element);
-echo ("<hr>");
-
-
+    foreach ($profile as $element)
+    {
+        var_dump($element);
+        echo ("<hr>");
+    }
 
 ?>
+
 <!--
 <div class="control-group">
     <div class="controls">
