--- a/templates/person/profileeditor.phtml
+++ b/templates/person/profileeditor.phtml
@@ -4,7 +4,7 @@
 
 <?php
 
-    foreach ($profile as $element)
+    foreach (this->$profile as $element)
     {
         var_dump($element);
         echo ("<hr>");
