--- a/templates/person/profileeditor.phtml
+++ b/templates/person/profileeditor.phtml
@@ -4,11 +4,11 @@
 
 <?php
 
-    foreach (this->profile as $element)
-    {
-        var_dump($element);
-        echo ("<hr>");
-    }
+    //foreach (this->profile as $element)
+    //{
+//        var_dump($element);
+//        echo ("<hr>");
+    //}
 
 ?>
 
