--- a/templates/person/profileeditor.phtml
+++ b/templates/person/profileeditor.phtml
@@ -4,11 +4,19 @@
 
 <?php
 
-    //foreach (this->profile as $element)
-    //{
-//        var_dump($element);
-//        echo ("<hr>");
-    //}
+if (isset($this->profile)
+{
+
+   foreach (this->profile as $element)
+{
+        var_dump($element);
+        echo ("<hr>");
+    }
+}
+else
+{
+    echo ("Damn, profile not set...");
+    }
 
 ?>
 
