--- a/templates/person/profileeditor.phtml
+++ b/templates/person/profileeditor.phtml
@@ -7,8 +7,8 @@
 if (isset($this->profile))
 {
 
-   foreach (this->profile as $element)
-{
+   foreach ($this->profile as $element)
+    {
         var_dump($element);
         echo ("<hr>");
     }
