--- a/templates/person/profileeditor.phtml
+++ b/templates/person/profileeditor.phtml
@@ -7,10 +7,18 @@
 if (isset($this->profile))
 {
 
-   foreach ($this->profile as $element)
+   foreach ($this->profile as $key => $element)
     {
         var_dump($element);
         echo ("<hr>");
+
+        echo ("<label class=\"control-label\" for=\"")
+        echo ($key)
+        echo ("\" id=\"");
+        echo ($key)
+        echo ("\"value=\"")
+        echo ($element);
+        echo ("\"/></div></div>");
     }
 }
 else
