--- a/templates/person/profileeditor.phtml
+++ b/templates/person/profileeditor.phtml
@@ -6,31 +6,35 @@
 
 if (isset($this->profile))
 {
-//    var_dump($this->profile);
+    $allowedPrefixes = array();
+    $allowedPrefixes[] = "http://xmlns.com/foaf/0.1/nick";
 
     foreach ($this->profile as $key => $element)
     {
-    //TODO: Filtern von z.B. foaf:knows
-    //Ressourcen gar nicht zeigen.
-    //Array für erwünschte Prädikate definieren --> Was darf editiert werden?
-    //und danach filtern.
-    //Unterscheidung zwischen Single und Multiple-Prädikaten
-    //Diff: Alte Werte löschen!
+        //DONE: Filtern von z.B. foaf:knows
+        //DONE: Ressourcen gar nicht zeigen.
+        //DONE: Array für erwünschte Prädikate definieren --> Was darf editiert werden?
+        //DONE: und danach filtern.
+        //TODO: Unterscheidung zwischen Single und Multiple-Prädikaten
+        //PARTLY DONE: Diff: Alte Werte löschen!
 
-    //if (!$allowedfields.contains($key))
-    //{
-    //  break;
-    //}
+        //if (!$allowedfields.contains($key))
+        //{
+        //  break;
+        //}
 
-    $keyX = $element["p"];
-    $elementX = $element["o"];
-echo ("<div class=\"control-group\">
-<label class=\"control-label\" for=\"$keyX\">$keyX</label>
-<div class=\"controls\">
-<input type=\"text\" class=\"input-xlarge\" name=\"$keyX\" id=\"$key\" value=\"$elementX\"/>
-<input type=\"hidden\" class=\"input-xlarge\" name=\"$keyX-old\" id=\"$key-old\" value=\"$elementX\"/>
-</div>
-</div>");
+        $keyX = $element["p"];
+        $elementX = $element["o"];
+        if (in_array($keyX, $allowedPrefixes))
+        {
+            echo ("<div class=\"control-group\">
+            <label class=\"control-label\" for=\"$keyX\">$keyX</label>
+            <div class=\"controls\">
+            <input type=\"text\" class=\"input-xlarge\" name=\"$keyX\" id=\"$key\" value=\"$elementX\"/>
+            <input type=\"hidden\" class=\"input-xlarge\" name=\"$keyX-old\" id=\"$key-old\" value=\"$elementX\"/>
+            </div>
+            </div>");
+        }
     }
 }
 else
