--- a/templates/partials/menu.phtml
+++ b/templates/partials/menu.phtml
@@ -21,10 +21,13 @@
     if ($this->username != "guest")
     {
         echo ("<li><a href=\"?c=person&amp;a=profileeditor\">Profile Editor</a></li>");
+        echo ("<li><a href=\"?c=application&amp;a=logout\">Logout</a></li>");
+    }
+    else
+    {
+        echo ("<li><a href=\"?c=application&amp;a=login\">Login</a></li>");
     }
     ?>
-    <li><a href="?c=application&amp;a=login">Login</a></li>
-    <li><a href="?c=application&amp;a=logout">Logout</a></li>
 </ul>
 </div>
 <!--/.nav-collapse -->
